z-index fix

--- a/src/app/class-single-page/class-single-page.component.scss
+++ b/src/app/class-single-page/class-single-page.component.scss
@@ -32,7 +32,7 @@
   width:100%;
   position: relative;
   animation:fadeIn 0.1s;
-  z-index: -1!important;
+ // z-index: -1!important;
  .page-banner {
    display: flex;
    align-items: center;
